apps/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-service
  namespace: default
spec:
  selector:
    app: homepage
  ports:
    - port: 3000
      targetPort: 3000
