apps/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  namespace: default
spec:
  rules:
    - host: home.192.168.1.30.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage-service
                port:
                  number: 3000
  tls:
    - hosts:
        - home.192.168.1.30.sslip.io
